--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native": "0.76.6",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "react-navigation": "^5.0.0",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
