--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "all": "^0.0.0",
     "axios": "^1.7.9",
     "expo": "~52.0.25",
     "expo-status-bar": "~2.0.1",
@@ -22,7 +25,7 @@
     "react-native": "0.76.6",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
-    "react-native-web": "~0.19.13",
+    "react-native-web": "^0.19.13",
     "react-navigation": "^5.0.0",
     "react-router-dom": "^7.1.1"
   },
