--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "jes": "^0.6.1"
   },
   "private": true
 }
