--- a/package.json
+++ b/package.json
@@ -9,14 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.0",
+    "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.0.4",
-
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-native-vector-icons/ionicons": "^7.4.0",
-
-    "@react-native-picker/picker": "^2.11.0",
-
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
@@ -24,14 +21,14 @@
     "@react-navigation/stack": "^7.1.1",
     "all": "^0.0.0",
     "axios": "^1.7.9",
-    "expo": "~52.0.25",
+    "expo": "~52.0.26",
     "expo-status-bar": "~2.0.1",
     "ionicons": "^7.4.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
-    "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.5.0",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-web": "^0.19.13",
     "react-navigation": "^5.0.0",
     "react-router-dom": "^7.1.1"
