--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "~52.0.26",
     "expo-status-bar": "~2.0.1",
     "ionicons": "^7.4.0",
+    "lucide-react-native": "^0.473.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
