--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "react-navigation": "^5.0.0",
     "react-router-dom": "^7.1.1"
