--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "@react-navigation/stack": "^7.1.1",
     "all": "^0.0.0",
     "axios": "^1.7.9",
-    "expo": "~52.0.26",
+    "expo": "^52.0.27",
     "expo-status-bar": "~2.0.1",
     "ionicons": "^7.4.0",
     "lucide-react-native": "^0.473.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.6",
-    "react-native-gesture-handler": "^2.22.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.76.6",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
@@ -36,7 +36,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "react-navigation": "^5.0.0",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
