--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "@react-navigation/stack": "^7.1.1",
     "all": "^0.0.0",
     "axios": "^1.7.9",
-    "expo": "^52.0.27",
+    "expo": "~52.0.38",
     "expo-status-bar": "~2.0.1",
     "ionicons": "^7.4.0",
     "lucide-react-native": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-native": "^0.76.6",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.8.0",
